--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,15 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation 'org.json:json:20200518'
+
+    testImplementation 'org.mockito:mockito-core:3.5.7'
+    testImplementation 'org.mockito:mockito-junit-jupiter:3.5.7'
+    testImplementation 'surefire:surefire:1.4'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
+}
+
+test {
+    useJUnitPlatform()
 }
