--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,16 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
 }
 
+// used for checking JAR class locator implementation.
+// below jar attribute is not required for final application as it's framework and does not require direct execution
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'doom.sample.Application'
+        )
+    }
+}
+
 test {
     useJUnitPlatform()
 }
