--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group 'org.example'
-version '0.3.0'
+version '0.9.0'
 
 repositories {
     mavenCentral()
@@ -17,18 +17,13 @@ dependencies {
     testImplementation 'surefire:surefire:1.4'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
+
     implementation 'commons-fileupload:commons-fileupload:1.4'
     implementation 'javax.servlet:javax.servlet-api:4.0.1'
 }
 
-// used for checking JAR class locator implementation.
-// below jar attribute is not required for final application as it's framework and does not require direct execution
 jar {
-    manifest {
-        attributes(
-                'Main-Class': 'doom.sample.Application'
-        )
-    }
+    exclude "doom/sample/**"
 }
 
 test {
